k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: three-tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      tolerations:
      - key: "eks.amazonaws.com/compute-class"
        operator: "Equal"
        value: "general-purpose"
        effect: "NoSchedule"
      containers:
      - name: backend
        image: 751101364131.dkr.ecr.ap-south-1.amazonaws.com/backend-app:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: three-tier
  
spec:
  selector:
    app: backend
  ports:
    - port: 3000
